# Codecrafters-Project---Designing-Shell-Interpreter

./: .gitignore  CMakeLists.txt  README.md
src/: .main.c.kate-swp  builtins.c  builtins.h  executor.c  executor.h  main.c  parser.c  parser.h  prg  redirector.c  redirector.h
